// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown editor syntax highlight atx heading 1`] = `
<div>
  <span class="zen-composer-md-heading zen-composer-md-heading1">
    <span class="zen-composer-md-delimiter">
      #
    </span>
    heading
  </span>
</div>
`;

exports[`markdown editor syntax highlight blockQuote basic 1`] = `
<div>
  <span class="zen-composer-md-block-quote">
    &gt;
    <span class="zen-composer-md-marked-text">
      block quote
    </span>
  </span>
</div>
`;

exports[`markdown editor syntax highlight blockQuote with list 1`] = `
<div>
  <span class="zen-composer-md-block-quote">
    &gt;
    <span class="zen-composer-md-list-item zen-composer-md-list-item-style zen-composer-md-list-item-odd">
      *
    </span>
    <span class="zen-composer-md-delimiter zen-composer-md-list-item">
      [
      <span class="zen-composer-md-meta">
      </span>
      ]
    </span>
    <span class="zen-composer-md-marked-text">
      block quote
    </span>
  </span>
</div>
`;

exports[`markdown editor syntax highlight bulletList 1`] = `
<div>
  <span class="zen-composer-md-list-item zen-composer-md-list-item-style zen-composer-md-list-item-odd">
    *
    <span class="zen-composer-md-marked-text">
    </span>
  </span>
  <span class="zen-composer-md-marked-text">
    bullet list
  </span>
</div>
`;

exports[`markdown editor syntax highlight code block 1`] = `
<div class="zen-composer-md-code-block-line-background start">
  <span class="zen-composer-md-code-block">
    <span class="zen-composer-md-delimiter">
      \`\`\`
    </span>
    <span class="zen-composer-md-meta">
      js
    </span>
  </span>
</div>
<div class="zen-composer-md-code-block-line-background">
  <span class="zen-composer-md-code-block">
    console.log("editor")
  </span>
</div>
<div class="zen-composer-md-code-block-line-background">
  <span class="zen-composer-md-code-block">
    <span class="zen-composer-md-delimiter">
      \`\`\`
    </span>
  </span>
</div>
`;

exports[`markdown editor syntax highlight code block within list 1`] = `
<div>
  <span class="zen-composer-md-list-item zen-composer-md-list-item-style zen-composer-md-list-item-odd">
    *
    <span class="zen-composer-md-marked-text">
    </span>
  </span>
  <span class="zen-composer-md-marked-text">
    list
  </span>
</div>
<div>
  <span class="zen-composer-md-code-block">
    <span class="zen-composer-md-marked-text">
    </span>
    <span class="zen-composer-md-delimiter">
      <span class="zen-composer-md-marked-text">
        \`\`\`
      </span>
    </span>
    <span class="zen-composer-md-marked-text">
      <span class="zen-composer-md-meta">
        js
      </span>
    </span>
  </span>
</div>
<div>
  <span class="zen-composer-md-code-block">
    <span class="zen-composer-md-marked-text">
      console.log("editor")
    </span>
  </span>
</div>
<div>
  <span class="zen-composer-md-code-block">
    <span class="zen-composer-md-delimiter">
      <span class="zen-composer-md-marked-text">
        \`\`\`
      </span>
    </span>
  </span>
</div>
`;

exports[`markdown editor syntax highlight custom block 1`] = `
<div class="zen-composer-md-custom-block-line-background start">
  <span class="zen-composer-md-custom-block">
    <span class="zen-composer-md-delimiter">
      $$
    </span>
    <span class="zen-composer-md-meta">
      custom
    </span>
  </span>
</div>
<div class="zen-composer-md-custom-block-line-background">
  <span class="zen-composer-md-custom-block">
    my custom element
  </span>
</div>
<div class="zen-composer-md-custom-block-line-background">
  <span class="zen-composer-md-custom-block">
    <span class="zen-composer-md-delimiter">
      $$
    </span>
  </span>
</div>
`;

exports[`markdown editor syntax highlight emph 1`] = `
<div>
  <span class="zen-composer-md-delimiter">
    *
  </span>
  <span class="zen-composer-md-emph">
    emph
  </span>
  <span class="zen-composer-md-delimiter">
    *
  </span>
</div>
`;

exports[`markdown editor syntax highlight image 1`] = `
<div>
  <span class="zen-composer-md-link">
    <span class="zen-composer-md-meta">
      !
    </span>
    [
  </span>
  <span class="zen-composer-md-link zen-composer-md-link-desc zen-composer-md-marked-text">
    Logo
  </span>
  <span class="zen-composer-md-link">
    ](
  </span>
  <span class="zen-composer-md-link zen-composer-md-link-url zen-composer-md-marked-text">
    https://picsum.photos/200
  </span>
  <span class="zen-composer-md-link">
    )
  </span>
</div>
`;

exports[`markdown editor syntax highlight inline code 1`] = `
<div>
  <span class="zen-composer-md-code zen-composer-md-delimiter zen-composer-md-start">
    \`
  </span>
  <span class="zen-composer-md-code zen-composer-md-marked-text">
    inline code
  </span>
  <span class="zen-composer-md-code zen-composer-md-delimiter zen-composer-md-end">
    \`
  </span>
</div>
`;

exports[`markdown editor syntax highlight link 1`] = `
<div>
  <span class="zen-composer-md-link">
    [
  </span>
  <span class="zen-composer-md-link zen-composer-md-link-desc zen-composer-md-marked-text">
    Zen Composer
  </span>
  <span class="zen-composer-md-link">
    ](
  </span>
  <span class="zen-composer-md-link zen-composer-md-link-url zen-composer-md-marked-text">
    https://ui.toast.com
  </span>
  <span class="zen-composer-md-link">
    )
  </span>
</div>
`;

exports[`markdown editor syntax highlight orderedList 1`] = `
<div>
  <span class="zen-composer-md-list-item zen-composer-md-list-item-style zen-composer-md-list-item-odd">
    1.
    <span class="zen-composer-md-marked-text">
    </span>
  </span>
  <span class="zen-composer-md-marked-text">
    ordered list
  </span>
</div>
`;

exports[`markdown editor syntax highlight seText heading 1`] = `
<div>
  <span class="zen-composer-md-heading zen-composer-md-heading2">
    heading
  </span>
</div>
<div>
  <span class="zen-composer-md-heading zen-composer-md-heading1 zen-composer-md-delimiter zen-composer-md-setext">
    ---
  </span>
</div>
`;

exports[`markdown editor syntax highlight strike 1`] = `
<div>
  <span class="zen-composer-md-delimiter">
    ~~
  </span>
  <span class="zen-composer-md-strike">
    strike
  </span>
  <span class="zen-composer-md-delimiter">
    ~~
  </span>
</div>
`;

exports[`markdown editor syntax highlight strong 1`] = `
<div>
  <span class="zen-composer-md-delimiter">
    **
  </span>
  <span class="zen-composer-md-strong">
    strong
  </span>
  <span class="zen-composer-md-delimiter">
    **
  </span>
</div>
`;

exports[`markdown editor syntax highlight table basic 1`] = `
<div>
  <span class="zen-composer-md-table">
    |
    <span class="zen-composer-md-table-cell">
      col2
    </span>
    |
    <span class="zen-composer-md-table-cell">
      col2
    </span>
  </span>
</div>
<div>
  <span class="zen-composer-md-table">
    | --- | ---
  </span>
</div>
<div>
  <span class="zen-composer-md-table">
    |
    <span class="zen-composer-md-table-cell">
      data1
    </span>
    |
    <span class="zen-composer-md-table-cell">
      data2
    </span>
    |
  </span>
</div>
`;

exports[`markdown editor syntax highlight table with mark 1`] = `
<div>
  <span class="zen-composer-md-table">
    |
    <span class="zen-composer-md-table-cell">
      col2
    </span>
    |
    <span class="zen-composer-md-table-cell">
      col2
    </span>
  </span>
</div>
<div>
  <span class="zen-composer-md-table">
    | --- | ---
  </span>
</div>
<div>
  <span class="zen-composer-md-table">
    |
    <span class="zen-composer-md-table-cell">
      data1
    </span>
    |
    <span class="zen-composer-md-table-cell">
      <span class="zen-composer-md-delimiter">
        **
      </span>
      <span class="zen-composer-md-strong">
        data2
      </span>
      <span class="zen-composer-md-delimiter">
        **
      </span>
    </span>
    |
  </span>
</div>
`;

exports[`markdown editor syntax highlight tastkList 1`] = `
<div>
  <span class="zen-composer-md-list-item zen-composer-md-list-item-style zen-composer-md-list-item-odd">
    *
  </span>
  <span class="zen-composer-md-delimiter zen-composer-md-list-item">
    [
    <span class="zen-composer-md-meta">
      x
    </span>
    ]
  </span>
  <span class="zen-composer-md-marked-text">
    task list
  </span>
</div>
`;

exports[`markdown editor syntax highlight thematicBreak 1`] = `
<div>
  <span class="zen-composer-md-thematic-break">
    ---
  </span>
</div>
`;
